app/assets/stylesheets/pages/notes.scss
/* ... */
.discussion-header,
.note-header {
  position: relative;

  a {
    color: inherit;

    &:hover {
      color: $gl-link-color;
    }

    &:focus,
    &:hover {
      text-decoration: none;
    }
  }

  .author_link {
    color: $gl-text-color;
  }
}

.discussion-header {
  font-size: 14px;
}

.note-header {
  display: flex;
  justify-content: space-between;

  @media (max-width: $screen-xs-max) {
    flex-flow: row wrap;
  }
}

.note-header-info {
  min-width: 0;
  padding-bottom: 8px;
}

.system-note .note-header-info {
  padding-bottom: 0;
}

.note-header-author-name {
  @media (max-width: $screen-xs-max) {
    display: none;
  }
}

.note-headline-light {
  display: inline;

  @media (max-width: $screen-xs-min) {
    display: block;
  }
}

.note-headline-light,
.discussion-headline-light {
  color: $notes-light-color;
}

.discussion-headline-light {
  a {
    color: $gl-link-color;
  }
}

.note-headline-meta {
  display: inline-block;
  white-space: nowrap;

  .system-note-message {
    white-space: normal;
  }
}

/**
 * Actions for Discussions/Notes
 */

.discussion-actions {
  float: right;
  margin-left: 10px;
  color: $gray-darkest;
}

.note-actions {
  flex-shrink: 0;
  // For PhantomJS that does not support flex
  float: right;
  margin-left: 10px;
  color: $gray-darkest;

  @media (max-width: $screen-xs-max) {
    float: none;
    margin-left: 0;
  }

  .note-action-button {
    margin-left: 8px;
  }
}

.discussion-actions {
  @media (max-width: $screen-md-max) {
    float: none;
    margin-left: 0;

    .note-action-button {
      margin-left: 0;
    }
  }
}

.note-action-button {
  display: inline;
  line-height: 20px;

  @media (min-width: $screen-sm-min) {
    margin-left: 10px;
    line-height: 24px;
  }

  .fa {
    color: $gray-darkest;
    position: relative;
    font-size: 17px;
  }

  svg {
    height: 16px;
    width: 16px;
    fill: $gray-darkest;
    vertical-align: text-top;
  }

  .award-control-icon-positive,
  .award-control-icon-super-positive {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
  }

  &:hover,
  &.is-active {
    .danger-highlight {
      color: $gl-text-red;
    }

    .link-highlight {
      color: $gl-link-color;

      svg {
        fill: $gl-link-color;
      }
    }

    .award-control-icon-neutral {
      opacity: 0;
    }

    .award-control-icon-positive {
      opacity: 1;
    }
  }

  &.is-active {
    .award-control-icon-positive {
      opacity: 0;
    }

    .award-control-icon-super-positive {
      opacity: 1;
    }
  }
}

.discussion-toggle-button {
  padding: 0;
  background-color: transparent;
  border: 0;
  line-height: 20px;
  font-size: 13px;
  transition: color 0.1s linear;

  &:hover {
    color: $gl-link-color;
  }

  &:focus {
    text-decoration: underline;
    outline: none;
    color: $gl-link-color;
  }

  .fa {
    margin-right: 3px;
    font-size: 10px;
    line-height: 18px;
    vertical-align: top;
  }
}

.note-role {
  position: relative;
  top: -2px;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  color: $notes-role-color;
  font-size: 12px;
  line-height: 20px;
  border: 1px solid $border-color;
  border-radius: $border-radius-base;
}


/**
 * Line note button on the side of diffs
 */

.add-diff-note {
  display: none;
  margin-top: -2px;
  border-radius: 50%;
  background: $white-light;
  padding: 1px 5px;
  font-size: 12px;
  color: $blue-500;
  margin-left: -55px;
  position: absolute;
  z-index: 10;
  width: 23px;
  height: 23px;
  border: 1px solid $blue-500;
  transition: transform .1s ease-in-out;

  &:hover {
    background: $blue-500;
    border-color: $blue-600;
    color: $white-light;
    transform: scale(1.15);
  }

  &:active {
    outline: 0;
  }
}

.discussion-body,
.diff-file {
  .notes .note {
    padding: 10px 15px;

    &.system-note {
      padding: 0;
    }
  }
}

.diff-file {
  .is-over {
    .add-diff-note {
      display: inline-block;
    }
  }
}

.disabled-comment {
  margin-left: -$gl-padding-top;
  margin-right: -$gl-padding-top;
  background-color: $gray-light;
  border-radius: $border-radius-base;
  border: 1px solid $border-gray-normal;
  color: $note-disabled-comment-color;
  line-height: 200px;

  .disabled-comment-text {
    line-height: normal;
  }

  a {
    color: $gl-link-color;
  }
}

.line-resolve-all-container {
  @media (min-width: $screen-sm-min) {
    margin-right: 0;
    padding-left: $gl-padding;
  }

  > div {
    white-space: nowrap;
  }

  .btn-group {
    margin-left: -4px;
  }

  .discussion-next-btn {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  .btn.discussion-create-issue-btn {
    margin-left: -4px;
    border-radius: 0;
    border-right: 0;

    a {
      padding: 0;
      line-height: 0;

      &:hover {
        text-decoration: none;
        border: 0;
      }
    }

    .new-issue-for-discussion path {
      fill: $gray-darkest;
    }
  }
}

.line-resolve-all {
  vertical-align: middle;
  display: inline-block;
  padding: 6px 10px;
  background-color: $gray-light;
  border: 1px solid $border-color;
  border-radius: $border-radius-default;

  &.has-next-btn {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-right: 0;
  }

  .line-resolve-btn {
    margin-right: 5px;
  }
}

.line-resolve-btn {
  position: relative;
  top: 0;
  padding: 0;
  background-color: transparent;
  border: none;
  outline: 0;

  &.is-disabled {
    cursor: default;
  }

  &:not(.is-disabled):hover,
  &.is-active {
    color: $gl-text-green;

    svg {
      fill: $gl-text-green;
    }
  }

  svg {
    fill: $gray-darkest;
    height: 16px;
    width: 16px;
  }

  .loading {
    margin: 0;
    height: auto;
  }
}

.discussion-next-btn {
  svg {
    margin: 0;

    path {
      fill: $gray-darkest;
    }
  }
}

.discussion-notes .flash-container {
  margin-bottom: 0;
}
/* ... */

