Resolve "Resolved discussions icon is misaligned"

--- a/app/assets/stylesheets/pages/notes.scss
+++ b/app/assets/stylesheets/pages/notes.scss
@@ -673,7 +673,7 @@ ul.notes {
 .line-resolve-all {
   vertical-align: middle;
   display: inline-block;
-  padding: 6px 10px;
+  padding: 5px 10px 6px;
   background-color: $gray-light;
   border: 1px solid $border-color;
   border-radius: $border-radius-default;
@@ -686,6 +686,10 @@ ul.notes {
 
   .line-resolve-btn {
     margin-right: 5px;
+
+    svg {
+      vertical-align: middle;
+    }
   }
 }
 
@@ -720,6 +724,10 @@ ul.notes {
     margin: 0;
     height: auto;
   }
+}
+
+.line-resolve-text {
+  vertical-align: middle;
 }
 
 .discussion-next-btn {
